k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres 
  namespace: ps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.1 
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432  
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: mypvc

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: ps
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432 
    targetPort: 5432
