k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redis

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:6.0.8
          ports:
            - containerPort: 6379

      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: mypvc-2
          
---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 6379 
    targetPort: 6379
