k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-deployment
        image: ankush9844/user-wishlist:4.0
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "500Mi"
            cpu: "400m"
          requests:
            memory: "200Mi"
            cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80
